@@ -151,7 +151,7 @@ sub workflow
 	if( !defined $self->{processor}->{$cache_id} )
 	{
 		my %opts = ( item=> $self->{processor}->{eprint}, session=>$self->{session} );
-		if( $staff ) { $opts{STAFF_ONLY} = ["TRUE","BOOLEAN"]; }
+		$opts{STAFF_ONLY} = [$staff ? "TRUE" : "FALSE","BOOLEAN"];
  		$self->{processor}->{$cache_id} = EPrints::Workflow->new( $self->{session}, "default", %opts );
 	}
 
